--- a/tp/02-revision-tp.qmd
+++ b/tp/02-revision-tp.qmd
@@ -39,4 +39,49 @@ $$I = \int_{-1}^{1} \sqrt{1 - x^2} dx .$$
 
 4. Comparer la qualité de ces deux estimateurs de $I$ en fonction de $n$.
 
+
 ## Exercice 3: La loi des gaz parfaits
+
+Dans cet exercice, on se propose de vérifier la loi des gaz parfaits à partir des données. On rappelle que la loi des gaz parfaits est donnée par $PV = nRT$ où :
+
+* $P$ est la pression à l'intérieur du volume considéré en Pascal (Pa);
+
+* $V$ est le volume du gaz en m$^3$;
+
+* $n$ est la quantité de matière en mole (mol);
+
+* $R = 8.314$ est la constante universelle des gaz parfaits en J.mol$^{-1}$.K$^{-1}$;
+
+* $T$ est la température à l'intérieur du volume considéré en Kelvin (K).
+
+On conduit une expérience consistant à chauffer une quantité **fixe** de gaz dans un récipient fermé de volume **fixé**. La température $T$ en Kelvin et la pression $P$ en kPa sont enregistrées. On trouve les résultats suivants :
+
+
+```{r}
+#| echo: true 
+#| eval: false 
+temperature = [
+  406, 296, 272, 449, 483, 439, 460, 276, 321, 462, 408, 322, 285,
+  411, 491, 359, 453, 486, 413, 350, 263, 456, 390, 462, 389, 494,
+  303, 496, 336, 460
+]
+
+pression = [
+  1365, 982, 898, 1486, 1596, 1481, 1506, 906, 1085, 1542, 1367,
+  1072, 955, 1379, 1633, 1186, 1499, 1606, 1378, 1156, 867, 1514,
+  1306, 1525, 1287, 1665, 1020, 1635, 1118, 1529
+]
+```
+
+1. Tracer la pression en fonction de la température. Est-ce que le graphique est linéaire ?
+
+2. Construire la matrice $X = (1 | \text{temperature})$. La première colonne de $X$ est une colonne de $1$ et la deuxième colonne de $X$ est le vecteur des températures.
+
+3. Calculer le vecteur $\beta = (X^{\top} X)^{-1} X^{\top} Y$ où $Y$ est le vecteur des pressions. 
+
+4. Quelle est l'interprétation physique des éléments du vecteur $\beta$ ?
+
+5. À quelle valeur de $\beta_0$, le premier coefficient de $\beta$, devrait-on s'attendre dans le cadre d'un gaz parfait ? Est-ce le cas ici ? Pourquoi ?
+
+6. Supposons que le volume de gaz est de $10$dm$^3$. Estimer la quantité de matière $n$ en mole utilisé pour avoir les données.
+
