Data analysis project

--- a/contents/01-introduction.en.qmd
+++ b/contents/01-introduction.en.qmd
@@ -41,3 +41,11 @@ To finish this introduction, here is a quote from *Statistical Rethinking* by Ri
 
 > Statistics courses [...] tend to resemble horosscopes. There are two senses to this resemblance. First, in order to remain plausibly correct, they must remain tremendously vague. This is because the targets of the advice, for both horoscopes and statistical advice, are diverse. But only the most general advice applies to all cases. A horoscope uses only the basic facts of birth to forecast life events, and a [...] statistical guide uses only the basic facts of measurement and design to dictate a model. It is easy to do better, once more detail is available. In the case of statistical analysis, it is tipically only the scientist whho can provide that detail, not the statistician.
 > Second, there are strong incentives for both astrologers and statisticians to exaggerate the power and importance of their advice. No one likes an astrologer who forecasts doom, and few want a statistician who admits the answers as desired are not in the data as collected. Scientists desire results, and they will buy and attend to statisticians and statistical procedures that promise them. What we end up with is too often *horoscopic*: vague and optimistic, but still claiming critical importance. 
+
+
+
+
+::: {.content-visible when-format="pdf"}
+## References
+
+:::
