--- a/contents/remainders/02-probabilities.en.qmd
+++ b/contents/remainders/02-probabilities.en.qmd
@@ -239,3 +239,10 @@ Why do we divide this sum by $n -1$ and not by $n$ to estimate the variance? If 
 
 Let $D = \{\text{diag}(\widehat{\Sigma})\}^{1/2}$ be the matrix of standard deviations calculated on the sample. We can estimate the correlation matrix on the sample by
 $$\widehat{R} = D^{-1} \widehat{\Sigma} D^{-1}.$$
+
+
+
+::: {.content-visible when-format="pdf"}
+## References
+
+:::
