--- a/include/biblio.bib
+++ b/include/biblio.bib
@@ -144,3 +144,21 @@
   isbn = {978-1-4419-2322-6},
   file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Wasserman - 2010 - All of Statistics A Concise Course in Statistical Inference.pdf}
 }
+
+@article{wickhamTidyData2014,
+  title = {Tidy {{Data}}},
+  author = {Wickham, Hadley},
+  year = {2014},
+  month = sep,
+  journal = {Journal of Statistical Software},
+  volume = {59},
+  pages = {1--23},
+  issn = {1548-7660},
+  doi = {10.18637/jss.v059.i10},
+  urldate = {2023-10-25},
+  abstract = {A huge amount of effort is spent cleaning data to get it ready for analysis, but there has been little research on how to make data cleaning as easy and effective as possible. This paper tackles a small, but important, component of data cleaning: data tidying. Tidy datasets are easy to manipulate, model and visualize, and have a specific structure: each variable is a column, each observation is a row, and each type of observational unit is a table. This framework makes it easy to tidy messy datasets because only a small set of tools are needed to deal with a wide range of un-tidy datasets. This structure also makes it easier to develop tidy tools for data analysis, tools that both input and output tidy datasets. The advantages of a consistent data structure and matching tools are demonstrated with a case study free from mundane data manipulation chores.},
+  copyright = {Copyright (c) 2013 Hadley  Wickham},
+  langid = {english},
+  keywords = {data-cleaning,r-software},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Journal of Statistical Software/2014/Wickham_2014_Tidy Data.pdf}
+}
