--- a/contents/generalities/01-stat.qmd
+++ b/contents/generalities/01-stat.qmd
@@ -125,7 +125,7 @@ Lorsque que l'on travaille pour une entreprise, on a généralement accès aux s
 
 Il y a un dicton populaire en informatique, s'appliquant aussi en analyse de données: "Garbage in, garbage out". En gros, cela veut dire que peut importe à quel point le modèle est sophistiqué, si les données en entrée sont de mauvaise qualité, biaisé, incomplète, ... alors les résultats en sortie seront de mauvaise qualité. Ainsi, cela assure une certaine crédibilité, reproductibilité et utisabilité à nos conclusions.
 
-Mais qu'est-ce que l'on veut dire par qualité des données ?
+Mais qu'est-ce que l'on veut dire par qualité des données ? Pour nous assurer de la qualité des données, on pourra se poser les questions suivantes :
 
 * Est-ce que les données sont représentatives de la population cible ?
 
@@ -137,7 +137,7 @@ Mais qu'est-ce que l'on veut dire par qualité des données ?
 
 ### Constitution de la base de données
 
-Une fois nos données récupérées, on doit les charger en mémoire pour ensuite pouvoir faire des analyses. En Python, la librairie [pandas](https://pandas.pydata.org) permet de lire la plupart des formats de fichiers auxquels on aura affaire. En ce qui concerne R, il faut utiliser différentes libraries pour charger différents types de données (cf. @tbl-packages-R).
+Une fois nos données récupérées, on doit les charger en mémoire pour ensuite pouvoir faire des analyses. En Python, la librairie [`pandas`](https://pandas.pydata.org) permet de lire la plupart des formats de fichiers auxquels on aura affaire. En ce qui concerne R, il faut utiliser différentes libraries pour charger différents types de données (cf. @tbl-packages-R).
 
 | Format  | Extension    | Librarie   | 
 |---------|:------------ |-----------:|
@@ -149,18 +149,25 @@ Une fois nos données récupérées, on doit les charger en mémoire pour ensuit
 
 : Différentes libraries pour différents formats de fichiers. {#tbl-packages-R}
 
-Depuis une dizaine d'année, le concept de "tidy data" a emergé (cf. @wickhamTidyData2014).
+Depuis une dizaine d'année, le concept de "tidy data" a emergé (cf. @wickhamTidyData2014). Chaque jeu de données "tidy" respecte trois principes: 
+
+1. Chaque variable est une colonne du tableau.
+
+2. Chaque observation est une ligne du tableau.
+
+3. Chaque cellule du tableau correspond à une unique mesure.
+
+Cela permet d'avoir une approche unifiée pour l'analyse de données. De manière général, on essaiera toujours de mettre son jeu de données sous format "tidy". Le package [`tidyr`](https://tidyr.tidyverse.org/index.html) en R et la librairie [`pandas`](https://pandas.pydata.org/docs/index.html) en Python permettent de mettre en forme les données en format "tidy".
 
 
 ### Exploration et traitement préliminaire 
 
+Une fois les données chargées et sous le format "tidy", on fait une première exploration des données avant de passer à l'étape d'élaboration du modèle en elle-même. Cette étape, bien que **très importante**, n'est pas le coeur de ce cours. Voici quelques trucs à faire concernant cette première exploration:
 
+* Nettoyage de données: retirer les doublons, uniformiser les modalités, vérifier le format des valeurs spéciales, etc. 
 
-Nettoyage de données: cf R (importation, nettoyage, tidyverse, types de variables, retirer les doublons, uniformiser les modalités, vérifier le format des valeurs spéciales, pivot, opérateur pipe, jointure).
+* Exploration des données: modalités rares, modalités trop nombreuses, asymétrie, débalancement des classes, valeurs extrêmes ou aberrantes, variables fortement corrélées, valeurs manquantes. 
 
-Exploration des données: modalités rares, modalités trop nombreuses, asymétrie, débalancement des classes, valeurs extrêmes ou aberrantes, variables fortement corrélées, valeurs manquantes. 
-
-Statistiques descriptives
 
 
 ## Élaboration et validation des modèles 
@@ -170,6 +177,9 @@ Statistiques descriptives
 
 
 ## Suivi de la performance et amélioration
+
+Coucou
+
 
 
 ::: {.content-visible when-format="pdf"}
