Data analysis project

--- a/contents/generalities/01-stat.qmd
+++ b/contents/generalities/01-stat.qmd
@@ -169,17 +169,29 @@ Une fois les données chargées et sous le format "tidy", on fait une première 
 * Exploration des données: modalités rares, modalités trop nombreuses, asymétrie, débalancement des classes, valeurs extrêmes ou aberrantes, variables fortement corrélées, valeurs manquantes. 
 
 
-
 ## Élaboration et validation des modèles 
+
+Ce cours concerne l'élaboration et la validation de modèles. Pour l'instant, on peut retenir quatre composantes principales pour ceci:
+
+1. un **espace** (mathématique) dans lequel travailler;
+
+2. une **distance** permettant de comparer des observations;
+
+3. un **modèle** (ou algorithme);
+
+4. une **fonction** permettant de mesurer la qualité du modèle.
+
+On verra en détail chacune de ses composantes dans les parties suivantes.
 
 
 ## Mise en oeuvre
 
+Une fois que le modèle est choisi et valider, on peut vouloir le **mettre en production**. La mise en production est le fait de rendre le modèle disponible pour le plus grand nombre. Généralement, cela consiste à automatiser la collecte et le nettoyage des données, pour ensuite "nourir" le modèle créé et sortir des rapports d'analyse des résultats. Cette partie est ce qu'on appelle le **data engineering**. Un **data engineer** s'occupe donc de toute mise en place de la *pipeline* de traitement des données, de sa collecte à la sortie du modèle.
+
 
 ## Suivi de la performance et amélioration
 
-Coucou
-
+Finalement, une fois que le modèle est mis en production, il faut assurer un suivi de la performance. En effet, lors de l'arrivée de nouvelles données, il peut arriver que le modèle que l'on a considéré ne soit plus très adapté (e.g. les hypothèses faites ne sont plus correctes). Pour prévenir ce phénomène, on fait un **monitoring** du modèle en vérifiant régulièrement ces performances. On peut aussi vouloir améliorer notre modèle; par exemple parce qu'on a des hypothèses plus précise sur celles-ci ou bien des données de meilleures qualité. 
 
 
 ::: {.content-visible when-format="pdf"}
