--- a/contents/generalities/02-spaces.qmd
+++ b/contents/generalities/02-spaces.qmd
@@ -8,16 +8,50 @@ format:
       - \usepackage{mathtools}
 --- 
 
-Dans cette partie, on présente les différents types de données et les espaces associés permettant de faire des analyses.
+Avant de pouvoir modéliser ou analyser des données, il est fondamental de bien comprendre la nature des variables que l'on manipule. En effet, le **type de variables** détermine :
+
+* l'espace mathématique dans lequel elle vit;
+
+* les mesures de distance qu'on peut utiliser pour la comparer à d'autres;
+
+* et les modèles pertinents à utiliser. 
+
+Dans cette section, nous présentons les types de variables les plus courants, ainsi que les espaces associés.
+
+
+## Unité statistique 
+
+Une **unité statistique** est l'élément de base sur lequel une observation est effectué. Moralement, c'est le "porteur" de l'information qui est utilisé pour déterminer le niveau d'agrégation de l'analyse. L'unité statistique est un **choix** du modélisateur.
+
+::: {.callout-note icon=false}
+## Exemples
+
+* Dans le cas d'une enquête sur les revenus, on peut choisir l'individu comme unité.
+
+* Dans le cas d'une étude sur les classes d'un lycée, on peut choisir la classe comme unité.
+
+* Dans le cas d'une base de données d'imagerie médicale, on choisir l'image comme unité.
+
+:::
+
+::: {.callout-caution icon=false}
+## Parfois, une même base de données peut être analysée à plusieurs niveaux.
+
+Une image est constituée de pixels, chacun pouvant être décrit par des variables numériques (e.g. valeurs RVB, opacité, ...). On peut choisir d'analyser chaque pixel, et donc prendre le pixel pour unité, ou bien analyser chaque image comme un tout, et donc prendre l'image comme unité.
+
+:::
+
+
 
 ## Types de variables
 
-Avant de commencer la modélisation, il est important de bien comprendre le type des variables que l'on a. En effet, la nature des variables va influer sur l'espace dans lequel vivent nos données, et donc la distance que l'on va pouvoir utilisée pour comparer celles-ci, et par conséquent l'algorithme que l'on va implémenter. Les types de variables les plus courantes avec lesquelles on va travailler sont au nombre de quatre : les variables numériques, les variables ordinales, les variables nominales symétriques et les variables nominales asymétriques. On considère le type de variable pour la **plus petite unité statistique** de notre jeu de données.
+On distingue généralement quatre types de variables, que l'on identifie au niveau de la plus petite unité statistique du jeu de données.
+
 
 ::: {.callout-warning icon=false}
-## Variable numérique 
+## Variable numérique (ou quantitative)
 
-Une variable numérique est une variable dont la valeur numérique mesure quelque chose de quantifiable et dont la différence entre les valeurs reflète la différence entre les objets. 
+Une variable numérique (ou quantitative) est une variable dont les valeurs sont des nombres représentant une quantité mesurable. 
 
 Exemples: revenu en dollars, masse, âge, ...
 
@@ -26,32 +60,32 @@ Exemples: revenu en dollars, masse, âge, ...
 ::: {.callout-warning icon=false}
 ## Variable ordinale 
 
-Une variable ordinale est une variable qui ne donne pas une quantification précise d'un phénomène, mais dont les modalités peuvent être naturellement ordonnées.
+Une variable ordinale est une variable qualitative (ou catégorielle) dont les modalités peuvent être ordonnées naturellement, sans que l'écart entre les modalités soit quantifiable.
 
-Exemples: revenu faible, moyen ou élevé, ou niveau d'accord entre "tout-à-fait en désaccord", "en désaccord", "pas d'avis", "d'accord", "tout-à-fait d'accord", ...
-
-:::
-
-::: {.callout-warning icon=false}
-## Nominale symétrique 
-
-Une variable nominale symétrique est une variable qualitative dont toutes les modalités sont aussi informatives l'une que l'autre.
-
-Exemples: Sexe, sections d'un cours, ...
+Exemples: niveau de revenu (faible, moyen ou élevé),  niveau de satisfaction ("tout-à-fait en désaccord", "en désaccord", "pas d'avis", "d'accord", "tout-à-fait d'accord"), ...
 
 :::
 
 ::: {.callout-warning icon=false}
-## Nominale asymétrique 
+## Variable nominale symétrique 
 
-Une variable nominale asymétrique est une variable qualitative dont les modalités ne contiennent pas toutes le même niveau d'information, habituellement lorsque l'une des modalités est très fréquente, un peu la modalité par defaut, mais que les autres ne le sont pas.
+Une variable nominale symétrique est une variable qualitative (ou catégorielle) dont toutes les modalités sont aussi informatives l'une que l'autre.
 
-Exemples: variable indiquant si un individu est daltonien ou non (deux individus daltoniens ont quelque chose en commun, mais deux individus non-daltoniens n'ont pas forcément quelque chose en commun), variable indiquant si une transaction est frauduleuse (généralement, elle ne va pas l'être), ...
+Exemples: nationalité, filière de formation, ... 
+
+:::
+
+::: {.callout-warning icon=false}
+## Variable nominale asymétrique 
+
+Une variable nominale asymétrique est une variable qualitative (ou catégorielle) dont l'une des modalités a un statut particulier, souvent plus fréquente ou considérée comme la valeur "par défaut". Ainsi, avoir deux observations avec la valeur "par défaut" de cette variable nominale asymétrique ne nous apprend pas grand chose sur celles-ci; alors que on peut retirer beaucoup plus d'information de deux observations qui n'ont pas la valeur "par défaut".
+
+Exemples: présence ou absence d'un symptôme, transaction frauduleuse ou non, ... 
 
 :::
 
 
-Bien que ces types de variables soient les plus communs, on peut trouver beaucoup d'autres types de variables. Par exemple, on peut s'intéresser à de la comparaison de courbes, de mots, d'images, de graphs, etc. Dans ce cas, il est important de bien comprendre la notion d'**unité statistique**. Une unité statistique est l'unité dans laquel les mesures sont faites. Par exemple, si on s'intéresse à de l'analyse d'images, on pourrait se dire que nos images sont constitués de pixels, qui sont des variables numériques, et donc analyser nos images comme des variables numériques. Cependant, on peut faire le **choix** de considérer nos images comme notre unité statistique et donc de faire l'analyse au niveau image (et non variables numériques).
+Bien que ces types de variables soient les plus communs, on peut trouver beaucoup d'autres types de variables. Par exemple, on peut s'intéresser à de la comparaison de courbes, de textes, d'images, de réseaux, etc. Dans ces situations, le choix de la représentation dépend du niveau auquel on souhaite se placer, et donc de l'unité statistique.
 
 
 ## Espaces associés 
